Finish Java 8 backport